@@ -10,6 +10,8 @@ import org.openqa.selenium.By;
 import org.openqa.selenium.WebElement;
 import org.openqa.selenium.interactions.Actions;
 import org.openqa.selenium.remote.DesiredCapabilities;
+import org.openqa.selenium.support.ui.ExpectedConditions;
+import org.openqa.selenium.support.ui.WebDriverWait;
 import org.testng.annotations.*;
 import helpers.SystemHelpers;
 
@@ -17,13 +19,15 @@ import java.net.MalformedURLException;
 import java.net.URL;
 import java.time.Duration;
 import java.util.List;
+import java.util.Map;
 
 public class BaseTestApp {
-    private AppiumDriverLocalService service;
-    private String HOST = "127.0.0.1";
-    private String PORT = "4723";
-    private int TIMEOUT_SERVICE = 60;
-
+//    private AppiumDriverLocalService service;
+////    private String HOST = "127.0.0.1";
+//    private String HOST = "192.168.75.1";
+//    private String PORT = "4723";
+//    private int TIMEOUT_SERVICE = 60;
+//
 //    @BeforeSuite
 //    public void runAppiumServer() {
 //        //Kill process on port
@@ -35,6 +39,9 @@ public class BaseTestApp {
 //        builder.usingPort(Integer.parseInt(PORT));
 //        builder.withArgument(GeneralServerFlag.LOG_LEVEL, "info"); // Set log level (optional)
 //        builder.withTimeout(Duration.ofSeconds(TIMEOUT_SERVICE));
+//
+//        // >>> BỔ SUNG DÒNG NÀY để cho phép adb_shell
+//        builder.withArgument(GeneralServerFlag.ALLOW_INSECURE, "adb_shell");
 //
 //        //Start the server with the builder
 //        service = AppiumDriverLocalService.buildService(builder);
@@ -59,8 +66,15 @@ public class BaseTestApp {
 //        options.setPlatformName("Android");
 //        options.setAutomationName("UiAutomator2");
 //        options.setDeviceName("emulator-5554");
+//    //    options.setDeviceName("ce07171785147c060d7e");
 //        options.setAppPackage("vn.com.oceantech.asset_mobile");
 //        options.setAppActivity("vn.com.oceantech.asset_mobile.MainActivity");
+//        options.setCapability("enableImageInjection",true);
+//        //dung voi may that
+//        options.setCapability("unicodeKeyboard", true);
+//        options.setCapability("resetKeyboard", true);
+//
+//    //    options.setCapability("autoGrantPermissions", true);
 //        options.setNoReset(false);
 //        options.setFullReset(false);
 //
@@ -72,14 +86,31 @@ public class BaseTestApp {
 //        }
 //
 //        driver.manage().timeouts().implicitlyWait(Duration.ofSeconds(10));
+//        WebDriverWait wait = new WebDriverWait(driver, Duration.ofSeconds(10));
 //        // Tìm các ô nhập mã cơ sở bằng XPath và nhập giá trị
 //        List<WebElement> editTexts = driver.findElements(By.xpath("//android.widget.EditText"));
 //        System.out.println("Số lượng ô nhập liệu tìm thấy: " + editTexts.size());
 //        if (!editTexts.isEmpty()) {
-//            editTexts.getFirst().click();
-//            WebElement inputField = editTexts.getFirst();
-//            Actions actions = new Actions(driver);
-//            actions.sendKeys(inputField, "11111").perform();
+////            editTexts.getFirst().click();
+////            WebElement inputField = editTexts.getFirst();
+//////            Actions actions = new Actions(driver);
+//////            actions.sendKeys(inputField, "11111").perform();
+//
+//        //dùng máy thật
+//            WebElement inputField = editTexts.get(0); // lấy ô đầu tiên
+//            wait.until(ExpectedConditions.elementToBeClickable(inputField));
+//            inputField.click();
+//            inputField.clear();
+//            if (inputField.getText().isEmpty()) {
+//                System.out.println("Ô input vẫn trống, dùng adb shell để nhập text...");
+//                driver.executeScript("mobile: shell", Map.of(
+//                        "command", "input",
+//                        "args", List.of("text", "11111")
+//                ));
+//            } else {
+//                System.out.println("Text đã nhập thành công bằng sendKeys!");
+//            }
+//            //hết dùng máy that
 //        } else {
 //            System.out.println("Không tìm thấy ô nhập liệu nào.");
 //        }
